--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -71,6 +71,26 @@ jobs:
       - name: Build
         run: cargo build
 
+  test:
+    needs: changes
+    if: ${{ needs.changes.outputs.code == 'true' }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Install nextest
+        uses: taiki-e/install-action@a27ef18d36cfa66b0af3a360104621793b41c036 # v2.54.3
+        with:
+          tool: cargo-nextest
+      - name: Run tests
+        env:
+          RUST_BACKTRACE: 0
+        run: cargo nextest run
+
   lint-yaml:
     needs: changes
     if: ${{ needs.changes.outputs.yml == 'true' }}
