--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,10 @@ console = "0.16.0"
 ignore = "0.4.23"
 notify = "8.1.0"
 notify-debouncer-full = "0.5.0"
+ratatui = "0.29.0"
 similar = { version = "2.7.0", features = [ "inline" ] }
+tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync",
+"time"] }
 
 [dev-dependencies]
 insta = "1.43.1"
