--- a/deny.toml
+++ b/deny.toml
@@ -1,7 +1,14 @@
+[advisories]
+ignore = [
+    "RUSTSEC-2024-0436",
+]
+
 [licenses]
 allow = [
     "Apache-2.0",
     "CC0-1.0",
     "ISC",
     "MIT",
+    "Unicode-3.0",
+    "Zlib",
 ]
