--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,20 @@ console = "0.16.0"
 ignore = "0.4.23"
 notify = "8.1.0"
 notify-debouncer-full = "0.5.0"
+ratatui = "0.29.0"
 similar = { version = "2.7.0", features = [ "inline" ] }
+tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread", "sync",
+"time"] }
+tokio-util = "0.7.15"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [dev-dependencies]
 insta = "1.43.1"
 strip-ansi-escapes = "0.2.1"
+
+[lints.clippy]
+unwrap_used = "deny"
+expect_used = "deny"
+todo = "deny"
+dbg_macro = "deny"
