--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ exclude = [
 [dependencies]
 anyhow = "1.0.98"
 console = "0.16.0"
-dirs = "6.0.0"
+etcetera = "0.10.0"
 ignore = "0.4.23"
 notify = "8.1.0"
 notify-debouncer-full = "0.5.0"
