--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,15 @@ exclude = [
     ".github",
 ]
 
+[features]
+default = ["sound"]
+sound = ["dep:rodio"]
+
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.41", features = ["derive"] }
 console = "0.16.0"
-rodio = { version = "0.18", default-features = false, features = ["wav"] }
+rodio = { version = "0.18", default-features = false, features = ["wav"], optional = true }
 etcetera = "0.10.0"
 ignore = "0.4.23"
 notify = "8.1.0"
