--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.code == 'true' }}
     strategy:
+      fail-fast: false
       matrix:
         features:
           - name: "default"
@@ -56,6 +57,7 @@ jobs:
           - name: "no-sound"
             flags: "--no-default-features"
             install_sound_deps: false
+    name: lint-${{ matrix.features.name }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -75,6 +77,7 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.code == 'true' }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
         features:
@@ -84,6 +87,7 @@ jobs:
           - name: "no-sound"
             flags: "--no-default-features"
             install_sound_deps: false
+    name: build-${{ matrix.features.name }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -99,6 +103,7 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.code == 'true' }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
         features:
@@ -108,6 +113,7 @@ jobs:
           - name: "no-sound"
             flags: "--no-default-features"
             install_sound_deps: false
+    name: test-${{ matrix.features.name }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
