--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "dfft"
 version = "0.1.0-alpha.1"
 edition = "2024"
 license = "MIT"
-description = "dfft shows you changes to files in a directory as they happen"
+repository = "https://github.com/dhth/dfft"
+description = "see changes to files in a directory as they happen"
+homepage = "https://tools.dhruvs.space/dfft/"
 keywords = [
     "cli",
     "diff",
@@ -15,10 +17,15 @@ exclude = [
     ".github",
 ]
 
+[features]
+default = ["sound"]
+sound = ["dep:rodio"]
+
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.41", features = ["derive"] }
 console = "0.16.0"
+rodio = { version = "0.18", default-features = false, features = ["wav"], optional = true }
 etcetera = "0.10.0"
 ignore = "0.4.23"
 notify = "8.1.0"
@@ -36,8 +43,21 @@ insta = "1.43.1"
 insta-cmd = "0.6.0"
 strip-ansi-escapes = "0.2.1"
 
+[profile.dev.package]
+insta.opt-level = 3
+similar.opt-level = 3
+
 [lints.clippy]
 unwrap_used = "deny"
 expect_used = "deny"
 todo = "deny"
 dbg_macro = "deny"
+
+[profile.release]
+codegen-units = 1
+lto = "fat"
+strip = "symbols"
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
