--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,7 @@ notify = "8.1.0"
 notify-debouncer-full = "0.5.0"
 ratatui = "0.29.0"
 similar = { version = "2.7.0", features = [ "inline" ] }
-tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread", "sync",
-"time"] }
+tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
 tokio-util = "0.7.15"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
