test building binaries on gh actions

--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -20,5 +20,7 @@ publish-jobs = ["homebrew"]
 # Whether to install an updater program
 install-updater = false
 
+pr-run-mode = "upload"
+
 [dist.dependencies.apt]
 libasound2-dev = { version = '*', stage = ["build"] }
