--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     outputs:
       code: ${{ steps.filter.outputs.code }}
       deps: ${{ steps.filter.outputs.deps }}
+      publish: ${{ steps.filter.outputs.publish }}
       workflows: ${{ steps.filter.outputs.workflows }}
       yml: ${{ steps.filter.outputs.yml }}
     steps:
@@ -37,6 +38,9 @@ jobs:
               - "Cargo.toml"
               - "Cargo.lock"
               - "deny.toml"
+              - ".github/workflows/main.yml"
+            publish:
+              - "Cargo.toml"
               - ".github/workflows/main.yml"
             workflows:
               - ".github/**/*.yml"
@@ -163,3 +167,14 @@ jobs:
           repo: EmbarkStudios/cargo-deny
       - name: cargo deny
         run: cargo deny check
+
+  publish-check:
+    needs: changes
+    if: ${{ needs.changes.outputs.publish == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: cargo publish check
+        run: cargo publish --dry-run
