--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,10 +125,6 @@ jobs:
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           fi
-      - uses: swatinem/rust-cache@v2
-        with:
-          key: ${{ join(matrix.targets, '-') }}
-          cache-provider: ${{ matrix.cache_provider }}
       - name: Install dist
         run: ${{ matrix.install_dist.run }}
       # Get the dist-manifest
@@ -292,7 +288,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: "dht/homebrew-tap"
+          repository: "dhth/homebrew-tap"
           token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
       # So we have access to the formula
       - name: Fetch homebrew formulae
@@ -339,3 +335,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+
+  custom-publish-crates:
+    needs:
+      - plan
+      - announce
+    uses: ./.github/workflows/publish-crates.yml
+    with:
+      plan: ${{ needs.plan.outputs.val }}
+    secrets: inherit
