--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -10,7 +10,7 @@ ci = "github"
 # The installers to generate for each app
 installers = ["shell", "homebrew"]
 # A GitHub repo to push Homebrew formulas to
-tap = "dht/homebrew-tap"
+tap = "dhth/homebrew-tap"
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
 # Path that installers should place binaries in
@@ -19,8 +19,8 @@ install-path = "CARGO_HOME"
 publish-jobs = ["homebrew"]
 # Whether to install an updater program
 install-updater = false
-
-pr-run-mode = "upload"
-
+# Post-announce jobs to run in CI
+post-announce-jobs = ["./publish-crates"]
+# CI dependencies
 [dist.dependencies.apt]
 libasound2-dev = { version = '*', stage = ["build"] }
