--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -14,7 +14,7 @@ jobs:
       val: ${{ steps.plan.outputs.manifest }}
       tag: ${{ !github.event.pull_request && github.ref_name || '' }}
       tag-flag: ${{ !github.event.pull_request && format('--tag={0}', github.ref_name) || '' }}
-      publishing: ${{ !github.event.pull_request }}
+      publishing: true
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
