--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,9 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+    exclude-paths:
+      - ".github/workflows/release.yml"
+      - ".github/workflows/scan.yml"
     labels:
       - "dependencies"
     commit-message:
