--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,9 +4,6 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
-    exclude-paths:
-      - ".github/workflows/release.yml"
-      - ".github/workflows/scan.yml"
     labels:
       - "dependencies"
     commit-message:
@@ -19,3 +16,6 @@ updates:
       - "dependencies"
     commit-message:
       prefix: "ci"
+    exclude-paths:
+      - .github/workflows/release.yml
+      - .github/workflows/scan.yml
